Fix formatting etc.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,4 +11,4 @@ repos:
     rev: v1.1.379
     hooks:
       - id: pyright
-        additional_dependencies: [numpy, pytest]
+        additional_dependencies: [mkdocs]
